feat: 完善时间操作记录

--- a/常用包.md
+++ b/常用包.md
@@ -21,6 +21,22 @@ os包以跨平台的方式，提供了一些与操作系统交互的函数和变
 
 ## time包
 
+time包的核心结构是 `time.Time`, 如下：
+
+```go
+type Time struct {
+    wall uint64
+    ext  int64
+    loc *Location
+}
+```
+
+`time.Now()` 使用的 CST(中国标准时间)，而 `time.Parse()` 默认的是 UTC(零时区)，它们相差 8 小时。所以解析时常用 `time.ParseInLocation()`，可以指定时区。
+
+### 计算、比较日期
+
+进行日期计算的时候通常使用 `time`包的`Duration`类型
+
 ## math包
 
 ### 随机数
