feat: 完成对接口的学习

--- a/常用包.md
+++ b/常用包.md
@@ -95,7 +95,6 @@ func (l *Logger) SetPrefix(prefix string)
 
 ## io包
 
-
 ## strings包
 
 1. `strings.Join`函数：连接数组或者切片形成新的字符串
@@ -183,7 +182,12 @@ rng.Intn(100) // 生成[0,100)的随机整数，
 
 ## net/http包
 
-`net/http`包提供了HTTP客户端和服务端的实现
+`net/http`包提供了HTTP客户端和服务端的实现。
+
+### http协议基础
+
+HTTP协议是应用层协议，在通常情况下我们都会使用 TCP 作为底层的传输层协议传输数据包，但是 HTTP/3 在 UDP 协议上实现了新的传输层协议`QUIC`并使用`QUIC`传输数据，这也意味着 HTTP 既可以跑在 TCP 上，也可以跑在 UDP 上。
+HTTP 协议目前主要还是跑在 TCP 协议上的，TCP 协议是面向连接的、可靠的、基于字节流的传输层通信协议2，应用层交给 TCP 协议的数据并不会以消息为单位向目的主机传输，这些数据在某些情况下会被组合成一个数据段发送给目标的主机3。因为 TCP 协议是基于字节流的，所以基于 TCP 协议的应用层协议都需要自己划分消息的边界。在应用层协议中，最常见的两种解决方案是**基于长度或者基于终结符（Delimiter）**。HTTP 协议其实同时实现了上述两种方案，在多数情况下 HTTP 协议都会在协议头中加入 Content-Length 表示负载的长度，消息的接收者解析到该协议头之后就可以确定当前 HTTP 请求/响应结束的位置，分离不同的 HTTP 消息。HTTP 协议除了使用基于长度的方式实现边界，也会使用基于终结符的策略，当 HTTP 使用块传输（Chunked Transfer）机制时，HTTP 头中就不再包含 Content-Length 了，它会使用负载大小为 0 的 HTTP 消息作为终结符表示消息的边界
 
 ## net/url包
 
